fix: make hidden elements visible in player area for proper display

--- a/src/main/resources/static/stylish/pandalive.css
+++ b/src/main/resources/static/stylish/pandalive.css
@@ -65,6 +65,9 @@ body {
   position: relative;
   z-index: -1;
 }
+#player-area > div:nth-child(2) > div > div.hidden {
+  display: block;
+}
 #player-area > div > div:nth-child(2) > #video-section > div > div {
   height: 0;
 }
